syntax = "proto3";
package gov.hhs.aspr.ms.gcm.taskit.protobuf.plugins;

option java_multiple_files = true;
option java_package = "gov.hhs.aspr.ms.gcm.taskit.protobuf.plugins.personproperties.data.input";

import "plugins/personproperties/support.proto";
import "plugins/properties/support.proto";


message PersonPropertiesPluginDataInput {
    oneof pluginDataType {
        PersonPropertiesPluginDataDenseInput densePluginData = 1;
        PersonPropertiesPluginDataNonDenseInput pluginData = 2;
    }
    string version = 5;
}

message PersonPropertyValueMapListInput {
    repeated PersonPropertyValueMapInput personPropertyValues = 1;
}

message PersonPropertiesPluginDataDenseInput {
    bytes dataBytes = 1;
}

message PersonPropertiesPluginDataNonDenseInput {
    repeated PropertyDefinitionMapInput personPropertyDefinitions = 1;
    oneof personPropertyValues {
        PersonPropertyValueMapListInput valuesList = 2;
        bytes valuesBytes = 3;
    }
    repeated PersonPropertyTimeMapInput personPropertyTimes = 4;
}
