syntax = "proto3";
package gov.hhs.aspr.ms.gcm.taskit.protobuf.plugins;

option java_multiple_files = true;
option java_package = "gov.hhs.aspr.ms.gcm.taskit.protobuf.plugins.personproperties.support.input";

import "plugins/partitions/support.proto";
import "google/protobuf/any.proto";
import "google/type/date.proto";
import "core.proto";


message PersonPropertyIdInput {
    google.protobuf.Any id = 1;
}

message PersonPropertyValueInput {
    repeated int32 pId = 1;
    optional google.protobuf.Any mVal = 2;
    optional int32 i32Val = 3;
    optional double dVal = 4;
    optional bool bVal = 5;
    optional float fVal = 6;
    optional int64 i64Val = 7;
    optional string sVal = 8;
    optional google.type.Date dateVal = 9;
    optional gov.hhs.aspr.ms.taskit.protobuf.WrapperEnumValue enumVal = 10;
}

message PersonPropertyValueMapInput {
    PersonPropertyIdInput personPropertyId = 1;
    repeated PersonPropertyValueInput propertyValues = 2;
}

message PersonPropertyTimeInput {
    repeated int32 pId = 1;
    double propertyValueTime = 2;
}

message PersonPropertyTimeMapInput {
    PersonPropertyIdInput personPropertyId = 1;
    repeated PersonPropertyTimeInput propertyTimes = 2;
}

message PersonPropertyDimensionInput {
    PersonPropertyIdInput personPropertyId = 1;
    bool trackTimes = 2;
    repeated google.protobuf.Any values = 3;
}

message PersonPropertyFilterInput {
    PersonPropertyIdInput personPropertyId = 1;
    EqualityInput equality = 2;
    google.protobuf.Any personPropertyValue = 3;
}
